Implement resource reading method and update file writes
Added a method to read resources from classpath and fallback to filesystem. Updated file writing logic to use the new resource reading method.